--- a/style.css
+++ b/style.css
@@ -1,92 +1,55 @@
-* {box-sizing:border-box}
 body{
-  background-image: url('/images/cinema.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100% ;
-  
+    width: 100%;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #021c3a;
 }
-.mySlides {
-  display:none;
-  width: 100%;
-  height: 400px;
-  animation: slider 9s infinite linear;
-  transition: ease-in-out;
-  transform:matrix3d(3,4);
 
+.container{
+    width: 90%;
+    height: 400px;
+    position: relative;
 }
 
 
-main{
-  margin: 0px;
-  background-color: white;
+.container .image img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 15px;
+    overflow: hidden;
 }
 
-   /* .contanier{
-    max-width: 600px;
-    margin-top: 80px;
-    margin-left: 200px;
-    background-color: white;
-    padding: 200px;
-    }*/
-.contanier{
-  width: 70%;
-  height: 400px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background-image: url('/images/Dune.jpg');
-  background-size: 100% 100%;
-  box-shadow: 1px 2px 10px 5px white;
-  animation: slider 9s infinite linear;
-}
-@keyframes slider{
-  0%{background-image: url('/images/Dune.jpg');
-     }
-  35%{background-image: url('/images/eternals.jpg');
-    }
-  70%{background-image: url('/images/matrix.jpg'); 
-    }
-}
-main{
-  background-color: darkgray;
-  width: 0;
-  
-}
-.description{
-    margin-top: 30px;
-    width: 210px;
-    border: 2px solid rgb(246, 246, 248);
-    border-radius: 10px;
-    padding: 1px;
-    float: left;
-    margin-left: 150px;
-    background-color: seashell;
+.container .button{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    z-index: 5;
 }
 
-img{
-    width: 200px;
-    height: 140px;
-    float: none;
-    padding: 3px;
-
-}
-
-.description img{
-    margin-right: 1px;
-    float: top;
-    margin: 0;
-    padding: 5px;
-}
-.description h3{
-    margin: 0;
+.container .button a{
+    width: 40px;
+    height: 40px;
     text-align: center;
+    line-height: 40px;
+    vertical-align: middle;
+    align-items: center;
+    cursor: pointer;
+    color: white;
+    background: rgba(0, 0, 0, 0.8);
+    font-size: 20px;
+    user-select: none;
 }
 
+.container .button .prev{
+    border-radius: 0 5px 5px 0;
+}
 
-
-
-
-
-
+.container .button .next{
+    border-radius: 5px 0 0 5px;
+}
