--- a/style.css
+++ b/style.css
@@ -1,35 +1,36 @@
+*{
+   margin: 0;
+}
+
 body{
-    width: 100%;
-    height: 500px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #021c3a;
+   background-image: url("/frontend/images/cinema-img.jpg");
+   background-size: cover;
+
 }
 
 .container{
     width: 90%;
     height: 400px;
     position: relative;
+    top: 50px;
+    left: 50px;
 }
-
 
 .container .image img{
     width: 100%;
-    height: 400px;
+    height: 500px;
     object-fit: cover;
     border-radius: 15px;
-    overflow: hidden;
+    border: solid 5px white;
 }
 
 .container .button{
     position: absolute;
-    top: 50%;
-    left: 0;
+    top: 60%;
+    left: 5px;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    z-index: 5;
 }
 
 .container .button a{
@@ -39,17 +40,8 @@ body{
     line-height: 40px;
     vertical-align: middle;
     align-items: center;
-    cursor: pointer;
+    cursor:pointer;
     color: white;
     background: rgba(0, 0, 0, 0.8);
     font-size: 20px;
-    user-select: none;
-}
-
-.container .button .prev{
-    border-radius: 0 5px 5px 0;
-}
-
-.container .button .next{
-    border-radius: 5px 0 0 5px;
 }
