--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,23 @@
+/* 
+#443726 brun färg
+#1a150e mörk färg
+#eae9e8 grå
+
+
+color palette!
+--bistre: #433424;
+--gallery: #eeeeee;
+--night-rider: #100c08;
+--zorba: #a49c94;
+--makara: #837c71;
+--star-dust: #9c9c97;
+--chicago: #605f5d;
+--dusty-gray: #949494;
+--ironside-gray: #6c6c66;
+
+
+*/
+
 body{
     margin: 0;
     background-color: black;
@@ -93,6 +113,7 @@ header ::after{
     text-align: center;
     width: 100%;
     align-items: center;
+
 }
 
 .filmScheduleDiv{
