moved nav to it's own html-file, Made a sticky nav and added some a-tags

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -24,6 +24,12 @@ body{
     color: aliceblue;
 }
 
+    #navigation{
+      position: -webkit-sticky;
+      position: sticky;
+      top: 0;
+    }
+ 
 main{
     background-color: black;
     color: aliceblue;
