--- a/frontend/style.css
+++ b/frontend/style.css
@@ -173,3 +173,41 @@ header ::after{
     top: 1050px;
     left: 510px;
 }
+
+.container{
+     width: 90%;
+     height: 400px;
+     position: relative;
+     top: 50px;
+     left: 50px;
+ }
+ 
+ .container .image img{
+     width: 100%;
+     height: 500px;
+     object-fit: cover;
+     border-radius: 15px;
+
+ }
+ 
+ .container .button{
+     position: absolute;
+     top: 60%;
+     left: 5px;
+     width: 100%;
+     display: flex;
+     justify-content: space-between;
+ }
+ 
+ .container .button a{
+     width: 40px;
+     height: 40px;
+     text-align: center;
+     line-height: 40px;
+     vertical-align: middle;
+     align-items: center;
+     cursor:pointer;
+     color: white;
+     background: rgba(0, 0, 0, 0.8);
+     font-size: 20px;
+ }
