--- a/frontend/style.css
+++ b/frontend/style.css
@@ -211,3 +211,74 @@ header ::after{
      background: rgba(0, 0, 0, 0.8);
      font-size: 20px;
  }
+
+
+ /*
+ *  Style for customer category selection components
+ */
+
+#showMain{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin: 0 auto;
+}
+
+#showInfo{
+    text-align: center;
+    margin: 0 auto;
+    width: 100%;
+}
+
+#customerCategorySelection{
+    margin-top: 100px;
+}
+
+#customerCategoryH{
+    font-size: 30px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.customerCategoryDiv{
+    margin: 0 auto;
+    font-size: 25px;
+    max-width: 300px;
+}
+
+.customerCategoryP{
+   padding-left: 15px;
+   padding-right: 15px;
+}
+
+.customerCategorySpanTop{
+    float: right;
+}
+
+.customerCategorySub{
+    display: inline-block;
+    margin-right: 15px;
+    border: solid 1px;
+    border-radius: 6px;
+    width: 25px;
+    text-align: center;
+    background-color:#433424;
+}
+
+.customerCategorySub:hover{
+    cursor: pointer;
+    background-color: #949494;
+}
+
+.customerCategoryAdd{
+    display: inline-block;
+    margin-left: 15px;
+    border: solid 1px;
+    border-radius: 6px;
+    width: 25px;
+    text-align: center;
+    background-color: #433424;
+}
+
+.customerCategoryAdd:hover{
+    cursor: pointer;
+    background-color: #949494;
+}
