--- a/frontend/style.css
+++ b/frontend/style.css
@@ -89,7 +89,6 @@ header ::after{
    
 }
 
-
 #showSchedule{
     float: right;
     display: flex;
@@ -99,7 +98,7 @@ header ::after{
     background-color: black;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: aliceblue;
-    width: 15%;
+    width: 12%;
 }
 
 #dateSelect{
@@ -117,7 +116,7 @@ header ::after{
 
 #movies{
     text-align: center;
-    width: 100%;
+    width: 85%;
     align-items: center;
 
 }
@@ -175,43 +174,40 @@ header ::after{
 }
 
 .container{
-     width: 90%;
-     height: 400px;
-     position: relative;
-     top: 50px;
-     left: 50px;
- }
+    width: 85%;
+    position: static;
+    top: 50px;
+    left: 50px;
+}
  
- .container .image img{
-     width: 100%;
-     height: 500px;
-     object-fit: cover;
-     border-radius: 15px;
-
- }
+.container .image img{
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 15px;
+}
  
- .container .button{
-     position: absolute;
-     top: 60%;
-     left: 5px;
-     width: 100%;
-     display: flex;
-     justify-content: space-between;
- }
+.container .button{
+    position: inherit;
+    top: 60%;
+    left: 5px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
  
- .container .button a{
-     width: 40px;
-     height: 40px;
-     text-align: center;
-     line-height: 40px;
-     vertical-align: middle;
-     align-items: center;
-     cursor:pointer;
-     color: white;
-     background: rgba(0, 0, 0, 0.8);
-     font-size: 20px;
- }
-
+.container .button a{
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    vertical-align: middle;
+    align-items: center;
+    cursor:pointer;
+    color: white;
+    background: rgba(0, 0, 0, 0.8);
+    font-size: 20px;
+}
 
  /*
  *  Style for customer category selection components
