--- a/frontend/style.css
+++ b/frontend/style.css
@@ -66,7 +66,7 @@ nav li{
     text-decoration: none;
     text-transform: capitalize;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
 .nav-list a:hover{
@@ -329,3 +329,27 @@ header ::after{
     margin-bottom: 10px;
     background-color: #605f5d;
 }
+
+div#bottom {
+border-top: 1px solid aliceblue;
+}
+ div#bottom a{
+color: aliceblue;
+}
+div#bottom {
+width: 100%;
+min-width: 1140px;
+font-size: 16px;
+letter-spacing: 1px;
+padding-top: 8px;
+padding-bottom: 20px;
+position: relative;
+margin-left: auto;
+margin-right: auto;
+text-align: center;
+height: 40px;
+clear: both;
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+
