--- a/frontend/style.css
+++ b/frontend/style.css
@@ -170,8 +170,20 @@ header ::after{
 
 .movie-title{
     position: absolute;
-    top: 1050px;
-    left: 510px;
+    top: 600px;
+    left: 300px;
+}
+.movie-trailer-container{
+    max-width: 100%;
+    height: 500px;
+}
+
+.movie-description-container{
+    position: relative;
+    left: 700px;
+    top: 300px;
+    max-width: 25%;
+    height: 400px;
 }
 
 .container{
