--- a/frontend/style.css
+++ b/frontend/style.css
@@ -117,9 +117,9 @@ header ::after{
 }
 
 #showInfo{
-    right: 1200px;
+   /* right: 1200px;*/
     max-width: 300px;
-    position: absolute;
+/*    position: absolute; */'
 }
 
 #movies{
