--- a/frontend/style.css
+++ b/frontend/style.css
@@ -235,7 +235,7 @@ header ::after{
 /*Style for about page*/
 .content-container{
 padding:30px;
-font-family:'Roboto';
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 font-size:16px;
 font-weight:300;
 line-height:24px;
