--- a/frontend/style.css
+++ b/frontend/style.css
@@ -119,7 +119,7 @@ header ::after{
 #showInfo{
    /* right: 1200px;*/
     max-width: 300px;
-/*    position: absolute; */'
+/*    position: absolute; */
 }
 
 #movies{
@@ -377,11 +377,11 @@ margin-left: 150px;
 .dropdown__content {
 display: none;
 left: 0;
-paddingtop: 4px;
+padding-top: 4px;
 position: absolute;
 top: 100%;
 background-color: rgb(0, 0, 0);
-zindex: 9999;
+z-index: 9999;
 height: 150px;
 width: 400px;
 }
