--- a/frontend/style.css
+++ b/frontend/style.css
@@ -200,41 +200,43 @@ header ::after{
 /*Style for the slideshow*/
 
 .container{
-     width: 85%;
-     position: static;
-     top: 50px;
-     left: 50px;
- }
- 
- .container .image img{
-     width: 100%;
-     height: 500px;
-     object-fit: cover;
-     border-radius: 15px;
+    width: 85%;
+    position: static;
+    top: 50px;
+    left: 50px;
+}
 
- }
- 
- .container .button{
-     position: inherit;
-     top: 60%;
-     left: 5px;
-     width: 100%;
-     display: flex;
-     justify-content: space-between;
- }
- 
- .container .button a{
-     width: 40px;
-     height: 40px;
-     text-align: center;
-     line-height: 40px;
-     vertical-align: middle;
-     align-items: center;
-     cursor:pointer;
-     color: white;
-     background: rgba(0, 0, 0, 0.8);
-     font-size: 20px;
- }
+.container .image img{
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+    border-radius: 15px;
+
+}
+
+.container .button{
+    position: absolute;
+    right: 18px;
+    top: 40%;
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.container .button a{
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    vertical-align: middle;
+    align-items: center;
+    cursor:pointer;
+    color: white;
+    background: rgba(0, 0, 0, 0.8);
+    font-size: 20px;
+}
+
+
 
 /*Style for about page*/
 .content-container{
