added carousel to new SPA but does not work

--- a/frontend_spa/partials/start.html
+++ b/frontend_spa/partials/start.html
@@ -1,3 +1,30 @@
+<link rel="stylesheet" href="/frontend/css-folders/carousel.css">
+
+<section aria-label="Movies">
+    <div class="carousel" data-carousel>
+        <button class="carousel-button prev" data-carousel-button="prev">&#8656;</button>
+        <button class="carousel-button next" data-carousel-button="next">&#8658;</button>
+        <ul data-slides>
+            <li class="slide" data-active>
+                <img src="/frontend_spa/images/movieSliderImages/Dune_wallpaper.jpg" alt="Dune">
+            </li>
+            <li class="slide">
+                <img src="/frontend_spa/images/movieSliderImages/eternals_wallpaper.jpg" alt="Marvel eternals">
+            </li>
+            <li class="slide">
+                <img src="/frontend_spa/images/movieSliderImages/finch_wallpaper.jpg" alt="Finch">
+            </li>
+            <li class="slide">
+                <img src="/frontend_spa/images/movieSliderImages/matrixResurections_wallpaper.jpg"
+                    alt="Matrix Ressurections">
+            </li>
+            <li class="slide">
+                <img src="/frontend_spa/images/movieSliderImages/redNotice_wallpaper.jpg" alt="Red Notice">
+            </li>
+        </ul>
+    </div>
+</section>
+
 <div id="showSchedule">
     <h2>Visningar</h2>
     <p>Välj datum</p>
@@ -13,3 +40,4 @@
 </div>
 
 <footer id="bottom"></footer>
+<script src="/frontend_spa/js/carousel.js"></script>
