changes to spa version

--- a/frontend_spa/partials/start.html
+++ b/frontend_spa/partials/start.html
@@ -1,25 +1,22 @@
-<link rel="stylesheet" href="/frontend/css-folders/carousel.css">
-
 <section aria-label="Movies">
     <div class="carousel" data-carousel>
         <button class="carousel-button prev" data-carousel-button="prev">&#8656;</button>
         <button class="carousel-button next" data-carousel-button="next">&#8658;</button>
         <ul data-slides>
             <li class="slide" data-active>
-                <img src="/frontend_spa/images/movieSliderImages/Dune_wallpaper.jpg" alt="Dune">
+                <img src="/images/movieSliderImages/Dune_wallpaper.jpg" alt="Dune">
             </li>
             <li class="slide">
-                <img src="/frontend_spa/images/movieSliderImages/eternals_wallpaper.jpg" alt="Marvel eternals">
+                <img src="/images/movieSliderImages/eternals_wallpaper.jpg" alt="Marvel eternals">
             </li>
             <li class="slide">
-                <img src="/frontend_spa/images/movieSliderImages/finch_wallpaper.jpg" alt="Finch">
+                <img src="/images/movieSliderImages/finch_wallpaper.jpg" alt="Finch">
             </li>
             <li class="slide">
-                <img src="/frontend_spa/images/movieSliderImages/matrixResurections_wallpaper.jpg"
-                    alt="Matrix Ressurections">
+                <img src="/images/movieSliderImages/matrixResurections_wallpaper.jpg" alt="Matrix Ressurections">
             </li>
             <li class="slide">
-                <img src="/frontend_spa/images/movieSliderImages/redNotice_wallpaper.jpg" alt="Red Notice">
+                <img src="/images/movieSliderImages/redNotice_wallpaper.jpg" alt="Red Notice">
             </li>
         </ul>
     </div>
@@ -32,12 +29,11 @@
     <div id="showInfo"></div>
 </div>
 
-<div class="container">
+<!--<div class="container">
     <div class="button">
         <a onclick="nextimg(-1)" class="prev">&#10094;</a>
         <a onclick="nextimg(1)" class="next">&#10095;</a>
     </div>
-</div>
+</div>-->
 
 <footer id="bottom"></footer>
-<script src="/frontend_spa/js/carousel.js"></script>
