page hard reloads doesn't crash the site

--- a/frontend_spa/partials/show.html
+++ b/frontend_spa/partials/show.html
@@ -1,5 +1,6 @@
 <div id="showMain">
     <div id="movieTitle"></div>
+    <div id="movieImageContainer"></div>
     <div id="showInfo"></div>
 
     <div id="customerCategorySelection">
