changes to styling, added show_page_style, bug fix

--- a/frontend_spa/partials/show.html
+++ b/frontend_spa/partials/show.html
@@ -1,7 +1,7 @@
 <div id="showMain">
     <div id="movieTitle"></div>
     <div id="movieImageContainer"></div>
-    <div id="showInfo"></div>
+    <div id="showInfoDiv"></div>
 
     <div id="customerCategorySelection">
         <div class="customerCategoryDiv">
@@ -37,7 +37,6 @@
                 </span>
             </div>
         </div>
-        <div id="total-price-container"></div>
     </div>
 
     <div id="auditoriumContainer">
@@ -53,6 +52,7 @@
         <div id="screen"></div>
         <div id="seats"></div>
 
+        <div id="total-price-container">Pris: </div>
         <div id="confirm-btn">
             <button id="btn">Köp</button>
         </div>
