--- a/frontend_spa/partials/about.html
+++ b/frontend_spa/partials/about.html
@@ -2,35 +2,49 @@
     <div class="image right">
         <img src="/images/filmvisarna.jpg" alt="" />
     </div>
-    <h2>Om Filmvisarna</h2>
-    <p>
-        It is a long established fact that a reader will be distracted by the readable content of a page when looking at
-        its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-        opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing
-        packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum'
-        will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-        accident, sometimes on purpose (injected humour and the like).
+    <h2 class="about-us-title">Hur Filmvisarna kom till</h2>
+    <br>
+    <p class="about-us-text">
+        Året var 1952 min gammelfarfar hadde bestämt sig för att öppna en biograf, och inte bara vilken biograf som
+        helst utan
+        den första biografen som visade filmer med färg här i Småland. Snabbt blev hans biograf väldigt populärt utöver
+        den lilla
+        staden. Men
+        efter 20 år var han tvungen att stänga ner biografen.
+        Där satt den helt oanvänd och sammlade inget annat än damm. Min gammelfarfar bestämde sig för att behålla
+        bygnaden och efter hans död
+        fick min farfar ärva den. Många gånger som barn lekte jag I den gammla obemannade biografen och skapade en
+        speciell förknytelse till
+        biografen.
     </p>
-    <p>
-        It is a long established fact that a reader will be distracted by the readable content of a page when looking at
-        its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as
-        opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing
-        packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum'
-        will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by
-        accident, sometimes on purpose (injected humour and the like).
+    <p class="about-us-text">
+        Efter flera år hadde paserat så satt jag där inne i biografen en dag och tänkte om hur fantastiskt det hadde
+        varit att få öppna upp biograf salongen igen.
+        Fräscha till den lite, uppdatera techonologin och återskapa den magin som folket hadde fått uppleva under
+        50-talet.
+        Den dröm bestämde jag mig att göra verkllighet och efter 2 år av konstant arbete kan jag med stolthet säga att
+        Filmvisarna
+        är tillbaka!
+
     </p>
     <div class="image left">
         <img src="/images/filmvisarna1.jpg" alt="" />
     </div>
     <div class="text">
-        <h4>What is Lorem Ipsum?</h4>
-        <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
-            letters, as opposed to using 'Content here, content here', making it look like readable English. Many
-            desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a
-            search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved
-            over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+        <h4 class="about-us-underheading">Lite om vår biograf</h4>
+        <br>
+        <p class="about-us-text">
+            Filmvisarna är uppdelade utöver 2 salonger. En större salong som vi lämpligtvis namnget Stora salongen, där
+            hittar ni 81 platser.
+            Dessutom har vi lyckets behålla den gammla salongen som vi döpt till lilla salongen vilket har 56 platser.
+            Väggarna är mörk bruna, stolarna röda utöver hela biografen hittar du olyka nyanser av brun och cremefärg
+            Detta motiv har vi gjort vårt bästa för att behålla, både I biografen och salongerna, men dessutom på vår
+            nya hemsida!
+            Med flera olika events varje år, finns det alltid något spännande som sker hos oss, så kom gärna och upplev
+            den fina atmosfär som vi skapat.
+            <br>
+            Du hittar oss på <span class="span-adress">Hökhult 5, 340 13 Hamneda</span>
+
         </p>
     </div>
 </div>
