--- a/frontend_spa/css-folder/fim-info.css
+++ b/frontend_spa/css-folder/fim-info.css
@@ -5,7 +5,8 @@
 }
 
 .body{
-    font-family: 'Muntagu';
+    font-family: 'Lora', serif;
+    color: #bfbab4
 }
 
 
@@ -14,6 +15,9 @@ main{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background-color: #100c08;
+    color: #bfbab4;
+    text-decoration: none;
 }
 
 .description{
@@ -33,6 +37,8 @@ main{
     box-shadow: 0.2px 4px 5px rgba(0,0,0,0.1);
     position: static;
     overflow: hidden;
+    float: left;
+    text-align: center;
 }
 .movie img{
     width: 100%;
@@ -69,8 +75,85 @@ main{
     transition: all 1s ease-in-out;
 }
 
+.movie:hover{
+    cursor: pointer;
+}
+
 .movie:hover .overview{
     transform: scale(1.2);  
     max-height: 100px;
     opacity: 1;  
 }
+
+/* .dropdown {
+position: relative;
+margin-top: 50px;
+margin-right: 30px;
+margin-left: 150px;
+} */
+
+.dropdown__content {
+display: none;
+left: 0;
+padding-top: 4px;
+position: absolute;
+top: 100%;
+background-color:#100c08;
+color: #bfbab4;
+z-index: 9999;
+height: 500px;
+width: 400px;
+overflow: auto;
+}
+
+.dropdown:hover .dropdown__content {
+display: block;
+}
+
+
+
+.container__media {
+margin-top: 50px;
+margin-right: 16px;
+margin-left: 16px;
+
+width: 400px;
+}
+
+.container__content {
+
+flex: 0.85;
+}
+
+.container__block {
+   font-size: 18px;
+   align-items: start;
+   display: flex;
+   margin-left: 16px;
+   
+}
+
+.about-movie-poster{
+    position: static; /* ändrad från absolute till static */
+    margin: 50px;
+    top: 700px;
+    left: 200px;
+}
+
+#moviesContainer{
+  margin: auto;
+  width: 70%;
+}
+
+
+.showschedule-button{
+   font-size: 18px;
+   font-family: 'Lora', serif;
+   font-weight: 900;
+   border-width: 2px;
+}
+
+.showschedule-button:hover{
+    cursor: pointer;
+}
+
