contact us page

--- a/frontend_spa/partials/contact.html
+++ b/frontend_spa/partials/contact.html
@@ -1,16 +1,30 @@
-<div class="container__block">
-  <img class="about-movie-poster" src="/frontend_spa/images/costumservice.jpg" alt="contact_us" width="350px" heigth="auto">
+<ol><div class="container__block">
+  <img class="about-movie-poster" src="/images/contactUs.jpg" alt="contact_us" width="350px" heigth="auto" >
+  </ol>
+  
+  <ol>
   <div class="container__media">
 
-    <div id="content">
-     <p>jadfjbadlkfjnbk</p>
+    <div id="content" style="margin-top: 10%;">
+      <h3><b><ul>Kontakta oss.</ul></b></h3>
+      <br>
+    <p>  </p><br>
+     <p>För att boka grupper för fler än 8 personer eller plats för rullstol så går det bra att ringa 010-10 01 11.</p><br>
+    <p></p><br>
+     <p>Kundservice har just nu begränsade öppettider. Vi finns tillgängliga per telefon 010-10 01 11 varje vardag mellan
+    10-12.</p><br>
+    <p>Det går också bra att maila.</p>
+    <p>Du når oss på email <a href="mailto: support@filmvisarna.se"><b>här</a></b> <br>
+      <p><br></p>
+    <p>Just nu har vi extra långa svarstider, men vi svarar dig så snart vi kan. Det går också bra att ställa frågor till oss
+    på Facebook.</p>
+    <p><br></p>
+    <p><br></p>
+    <p><br></p>
+
+    
     </div>
 
-  </div>
+  </div></ol>
 
-  <div class="container__content dropdown">
-    <button class="showschedule-button">
-      <h><a href="mailto: adamlundstedt@rocketmail.com"><b>Skicka Email</a></b></h>
-    </button>
-
-    </div>
+ 
