ändrat så kontakta oss har samma stil som om oss

--- a/frontend_spa/partials/contact.html
+++ b/frontend_spa/partials/contact.html
@@ -1,22 +1,22 @@
-<ol><div class="container__block">
-  <img class="about-movie-poster" src="/images/contactUs.jpg" alt="contact_us" width="350px" heigth="auto" >
+<ol><div class="container__block" style="margin: 0 auto;">
+  <img class="about-movie-poster" src="/images/contactUs.jpg" alt="contact_us" width="500px" heigth="auto" >
   </ol>
   
   <ol>
   <div class="container__media">
 
     <div id="content" style="margin-top: 10%;">
-      <h3><b><ul>Kontakta oss.</ul></b></h3>
+      <h2 class="about-us-title"><b><ul>Kontakta oss.</ul></b></h2>
       <br>
     <p>  </p><br>
-     <p>För att boka grupper för fler än 8 personer eller plats för rullstol så går det bra att ringa 010-10 01 11.</p><br>
+     <p class="about-us-text">För att boka grupper för fler än 8 personer eller plats för rullstol så går det bra att ringa 010-10 01 11.</p><br>
     <p></p><br>
-     <p>Kundservice har just nu begränsade öppettider. Vi finns tillgängliga per telefon 010-10 01 11 varje vardag mellan
+     <p class="about-us-text">Kundservice har just nu begränsade öppettider.<br> Vi finns tillgängliga per telefon 010-10 01 11 varje vardag mellan
     10-12.</p><br>
-    <p>Det går också bra att maila.</p>
-    <p>Du når oss på email <a href="mailto: support@filmvisarna.se"><b>här</a></b> <br>
+    <p class="about-us-text">Det går också bra att maila.</p>
+    <p class="about-us-text">Du når oss på email <a href="mailto: support@filmvisarna.se"><b>här</a></b> <br>
       <p><br></p>
-    <p>Just nu har vi extra långa svarstider, men vi svarar dig så snart vi kan. Det går också bra att ställa frågor till oss
+    <p class="about-us-text">Just nu har vi extra långa svarstider, men vi svarar dig så snart vi kan. Det går också bra att ställa frågor till oss
     på Facebook.</p>
     <p><br></p>
     <p><br></p>
