Fixat klickbara sliders bilder

--- a/frontend_spa/partials/start.html
+++ b/frontend_spa/partials/start.html
@@ -3,21 +3,27 @@
         <button class="carousel-button prev" data-carousel-button="prev">&#8656;</button>
         <button class="carousel-button next" data-carousel-button="next">&#8658;</button>
         <ul data-slides>
-            <li class="slide" data-active>
-                <img src="/images/movieSliderImages/Dune_wallpaper.jpg" alt="Dune">
-            </li>
-            <li class="slide">
-                <img src="/images/movieSliderImages/eternals_wallpaper.jpg" alt="Marvel eternals">
-            </li>
-            <li class="slide">
-                <img src="/images/movieSliderImages/finch_wallpaper.jpg" alt="Finch">
-            </li>
-            <li class="slide">
-                <img src="/images/movieSliderImages/matrixResurections_wallpaper.jpg" alt="Matrix Ressurections">
-            </li>
-            <li class="slide">
-                <img src="/images/movieSliderImages/redNotice_wallpaper.jpg" alt="Red Notice">
-            </li>
+        <li class="slide" data-active>
+            <a href="movie#p-Dune"><img src="/images/movieSliderImages/Dune_wallpaper.jpg" alt="Dune"
+                    style="display: block; width: 100%; height: 100%; object-fit: cover; object-position: center;"></a>
+        </li>
+        <li class="slide">
+            <a href="movie#p-Eternals"><img src="/images/movieSliderImages/eternals_wallpaper.jpg" alt="Marvel eternals"
+                    style="display: block; width: 100%; height: 100%; object-fit: cover; object-position: center;"></a>
+        </li>
+        <li class="slide">
+            <a href="movie#p-Finch"><img src="/images/movieSliderImages/finch_wallpaper.jpg" alt="Finch"
+                    style="display: block; width: 100%; height: 100%; object-fit: cover; object-position: center;"></a>
+        </li>
+        <li class="slide">
+            <a href="movie#p-Matrix%20Resurrections"><img src="/images/movieSliderImages/matrixResurections_wallpaper.jpg"
+                    alt="Matrix Ressurections"
+                    style="display: block; width: 100%; height: 100%; object-fit: cover; object-position: center;"></a>
+        </li>
+        <li class="slide">
+            <a href="movie#p-Red%20Notice"><img src="/images/movieSliderImages/redNotice_wallpaper.jpg" alt="Red Notice"
+                    style="display: block; width: 100%; height: 100%; object-fit: cover; object-position: center;"></a>
+        </li>
         </ul>
     </div>
 </section>
