--- a/frontend_spa/css-folder/fim-info.css
+++ b/frontend_spa/css-folder/fim-info.css
@@ -141,8 +141,11 @@ flex: 0.85;
 }
 
 #moviesContainer{
+  display: flex;
   margin: auto;
-  width: 70%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 
